<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/launch_gallery"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/gallery"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/convert_qr"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/convert"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/share_qr"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share"
        app:showAsAction="always|withText" />

    <!--android:icon="@drawable/ic_drawer"-->
    <item
        android:id="@+id/action_more"
        android:icon="@android:drawable/ic_menu_more"
        android:orderInCategory="100"
        android:title="@string/action_more"
        app:showAsAction="always">
        <menu>

            <item
                android:id="@+id/save_qr"
                android:icon="@android:drawable/ic_menu_save"
                android:orderInCategory="101"
                android:title="@string/save"
                app:showAsAction="never" />

            <item
                android:id="@+id/revert_qr"
                android:icon="@android:drawable/ic_menu_revert"
                android:orderInCategory="102"
                android:title="@string/revert"
                app:showAsAction="never" />

            <item
                android:id="@+id/change_color"
                android:icon="@android:drawable/ic_menu_view"
                android:orderInCategory="103"
                android:title="@string/change_color"
                app:showAsAction="never" />

            <item
                android:id="@+id/add_txt"
                android:icon="@android:drawable/ic_menu_edit"
                android:orderInCategory="104"
                android:title="@string/add_text"
                app:showAsAction="never" />

            <item
                android:id="@+id/select_mode"
                android:icon="@android:drawable/ic_menu_slideshow"
                android:orderInCategory="105"
                android:title="@string/select_mode"
                app:showAsAction="never" />

            <item
                android:id="@+id/scan_qr"
                android:icon="@android:drawable/ic_menu_camera"
                android:orderInCategory="106"
                android:title="@string/scan"
                app:showAsAction="never" />

            <item
                android:id="@+id/detect_qr"
                android:icon="@android:drawable/ic_menu_zoom"
                android:orderInCategory="107"
                android:title="@string/detect"
                app:showAsAction="never" />

            <item
                android:id="@+id/about_info"
                android:icon="@android:drawable/ic_menu_info_details"
                android:orderInCategory="108"
                android:title="@string/about"
                app:showAsAction="never" />
        </menu>

    </item>


    <!--<item-->
    <!--android:id="@+id/action_settings"-->
    <!--android:icon="@android:drawable/ic_menu_preferences"-->
    <!--android:title="@string/action_settings"-->
    <!--android:orderInCategory="100"-->
    <!--app:showAsAction="never" />-->

</menu>
