<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_titile"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical"
        android:background="?attr/colorPrimary"
        android:clipToPadding="true"
        android:elevation="3dp"
        android:fitsSystemWindows="true">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:src="@mipmap/ic_arrow_back_white_24dp"
            android:gravity="center_vertical|left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_show"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/music_zn"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:src="@mipmap/ic_search_white_24dp"
            android:gravity="center_vertical|left" />

    </LinearLayout>

    <ListView
        android:id="@+id/lv_music"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_titile"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:divider="?android:colorBackground"
        android:dividerHeight="2dp"
        android:scrollbars="none" />

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="?attr/colorPrimary"
        android:elevation="3dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/btn_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:backgroundTint="?attr/colorBackgroundFloating"
                android:background="@mipmap/ic_delete_white_24dp" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/tv_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_zn"
                android:textColor="?attr/colorBackgroundFloating"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/btn_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:backgroundTint="?attr/colorBackgroundFloating"
                android:background="@mipmap/ic_menu_copy_holo_dark" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/tv_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copy_zn"
                android:textColor="?attr/colorBackgroundFloating"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/btn_move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:backgroundTint="?attr/colorBackgroundFloating"
                android:background="@mipmap/ic_menu_cut_holo_dark" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/tv_cut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cut_zn"
                android:textColor="?attr/colorBackgroundFloating"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/btn_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:backgroundTint="?attr/colorBackgroundFloating"
                android:background="@mipmap/ic_done_all_white_24dp" />

            <TextView
                android:layout_width="1dp"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/tv_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_zn"
                android:textColor="?attr/colorBackgroundFloating"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

</RelativeLayout>